[package]
name = "embed-image"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
csscolorparser = "0.7.2"
humansize = "2.1.3"
image = { version = "0.24.9", default-features = false, features = [
    "jpeg",
    "png",
    "rayon",
    "webp",
] }
palc = "0.0.1"
qrencode = { version = "0.14.0", default-features = false, features = ["image"] }
spdlog-rs = { version = "0.4.3", default-features = false, features = ["level-info", "release-level-info"] }
zip = { version = "4.2.0", default-features = false, features = [
    "aes-crypto",
    "deflate",
    "zeroize",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
